--- a/.rootrc
+++ b/.rootrc
@@ -3,7 +3,7 @@ alias dir='ls -lhAF --time-style=long-iso --group-directories-first -t'
 test -f ~/.cargo/bin/lsd && alias dir='lsd -A -F -l --group-dirs first --date relative'
 test -f /bin/eza && alias dir='eza -lA --group-directories-first --time-style=long-iso --icons=always'
 alias ips='ip -o -c -br address'
-alias link='ip -o -c -br link'
+alias lnk='ip -o -c -br link'
 
 ##### And these are for Linux / Windows Switchers #####
 alias md='mkdir';alias rd='rmdir'
@@ -17,7 +17,7 @@ test -d ~/.cargo/bin && export PATH=$PATH:$HOME/.cargo/bin
 #### Constants ####
 export HISTTIMEFORMAT="%d/%m/%y %T "
 ##### RED prompt for root #####
-export PS1='\[\033[0;33m\]\t \[\033[31m\]\u\[\033[35m\]@\[\033[95m\]\h\[\033[35m\]:\[\033[36m\]\w\[\033[00m\]\$> '
+export PS1='\[\033[0;33m\]\t \[\033[31m\]\u\[\033[35m\]@\[\033[95m\]\h\[\033[35m\]:\[\033[36m\]\w\[\033[0;0;0m\]\$> '
 
 ##### To avoid listing snap,ram and loop-partitions #####
 alias lsblk='lsblk –e1,7,31'
